Implemented user input onto the grid and cleaned up UI

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <!-- Generate puzzle button -->
     <button class="btn" id="generate">New Puzzle</button>
     <!-- 9x9 Grid -->
-    <div class="grid">
+    <div class="grid" tabindex="0">
       <div class="square">
         <span id="value"></span>
       </div>
