Added a solve button that will autofill the puzzle with its solution

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
   <body>
     <!-- Generate puzzle button -->
     <button class="btn" id="generate">New Puzzle</button>
+    <button class="btn" id="solve">Solve</button>
     <!-- 9x9 Grid -->
     <div class="grid" tabindex="0">
       <div class="square">
