--- a/index.html
+++ b/index.html
@@ -10,9 +10,6 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <!-- Generate puzzle button -->
-    <button class="btn" id="generate">New Puzzle</button>
-    <button class="btn" id="solve">Solve</button>
     <!-- 9x9 Grid -->
     <div class="grid" tabindex="0">
       <div class="square">
@@ -258,6 +255,12 @@
       <div class="square">
         <span id="value"></span>
       </div>
+    </div>
+    <div class="button-wrapper">
+      <!-- Generate puzzle button -->
+      <button class="btn" id="generate">New Puzzle</button>
+      <!-- Solve puzzle button -->
+      <button class="btn" id="solve">Solve</button>
     </div>
     <script type="module" src="app.js"></script>
   </body>
